Actualize sample and add readme

--- a/sample-android/app/src/main/AndroidManifest.xml
+++ b/sample-android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
 
         <activity
             android:name=".LauncherActivity"
-            android:exported="true">
+            android:exported="true"
+            android:configChanges="orientation|screenSize|screenLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW"/>
